--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,7 +30,7 @@ a {
 
 .vizitka {
     width: 36em;
-    height: 16em;
+    min-height: 16em;
     border: 1px solid gray;
     background-color: white;
     margin: 1em;
